# ml-pipeline-engineering

./: README.md  pyproject.toml
docs/: Intro.md
notebooks/: simple_pipeline.ipynb
notebooks/.ipynb_checkpoints/: simple_pipeline-checkpoint.ipynb
notebooks/config/: run1.yaml
notebooks/config/.ipynb_checkpoints/: run2-checkpoint.yaml
