[tool.poetry]
name = "ml-pipeline-engineering"
version = "0.1.0"
description = ""
authors = ["Niklas Haas <niklas.haas@codecentric.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.16"
loguru = "^0.5.3"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
pyarrow = "^4.0.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
